--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ main {
     color: var(--corf);
     background-color: var(--cor1);
     height: 100%;
+    padding: 0 0 45px 0;
 }
 .container {
     display: flex;
@@ -269,16 +270,53 @@ progress {
     align-items: center;
 }
 .linkProjetos {
+    cursor: pointer;
     margin: 0px 5px;
     color: rgb(255, 255, 255);
     padding: 7px 17px;
-    border-radius: 30px;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
     text-decoration: none;
     background-image: linear-gradient(to right, #086c85, #003b49);
 }
-/*480px*/
+.projetosItem p {
+    color: #fff;
+}
+.infProjetos {
+    cursor: pointer;
+    margin: 0px 5px;
+    padding: 7px 17px;
+    font-size: 12px;
+    font-weight: bold;
+    text-decoration: none;
+    background-image: linear-gradient(to right, #086c85, #003b49);
+}
+.contato {
+    margin-top: 100px;
+}
+.contato h2 {
+    text-align: center;
+    margin-bottom: 40px;
+}
+.containerContato {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.contatoCont a {
+    min-width: 250px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+.contatoCont a {
+    text-decoration: none;
+    color: var(--corf);
+}
 @media (max-width:700px) {
     .headerContainer {
         padding: 15px;
@@ -323,17 +361,6 @@ progress {
         margin-bottom: 50px;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
 ::-webkit-scrollbar-track {
     background-color: #070724;
 }
@@ -373,5 +400,89 @@ progress {
 .light .porcentagem {
     color: #000;
 }
+.light .linkProjetos {
+    background-image: none;
+    background-color: #1195c9;
+}
+.light .contatoCont a {
+    color:rgb(53, 53, 53);
+}
+.light .projetosItem p {
+    color: #fff;
+    background-image: none;
+    background-color: #1195c9;
+}
 
+/*MODAL*/
 
+.modalBG {
+    display: none;
+    position: fixed;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    opacity: .4;
+    background-color: rgba(214, 214, 214, 0.548);
+    z-index: 1;
+}
+.modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    max-height: 100%;
+    max-width: 100%;
+    border-radius: 7px;
+    padding: 0px 20px 20px 20px;
+    transform: translate(-50%, -50%);
+    background-color: rgb(12, 41, 73);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.466);
+    z-index: 2;
+}
+.lineClose {
+    text-align: center;
+    padding: 10px;
+}
+.lineClose h2 {
+    color: #ffffff;
+    margin-bottom: 7px;
+}
+.lineClose img {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+    width: 20px;
+    opacity: .6;
+}
+.modalContent p {
+    text-align: justify;
+    padding: 0 4% 7px 4%;
+    color: #ffffff;
+}
+.basicInfModal {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+#dataModal {
+    font-size: 12px;
+    margin-top: 7px;
+    color: rgba(255, 255, 255, 0.555);
+}
+#language {
+    font-size: 13px;
+    margin-top: 7px;
+    color: rgba(255, 255, 255, 0.555);
+}
+@media (max-width:550px) {
+    .modal {
+        max-height: 100%;
+        width: 80vw;
+        padding: 0 10px;
+    }
+    .modalContent p {
+        padding: 0 1% 7px 1%;
+    }
+}
