--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,7 @@ progress {
 }
 .light #presDev {
     color: #4e4e4e;
+    border-right-color: rgba(0, 0, 0, 0.363);
 }
 .light #presCurriculo {
     background-image: linear-gradient(to right, #157297, #1195c9);
@@ -514,6 +515,9 @@ progress {
 .typingAnimation {
     animation: blinkCursor 550ms infinite normal, typing 3s steps(40) 1s normal both;
 }
+.light .typingAnimation {
+    animation: blinkCursorLight 550ms infinite normal, typing 3s steps(40) 1s normal both;
+}
 @keyframes typing {
     from {
         width: 0;
@@ -535,5 +539,13 @@ progress {
         } to {
             width: 76%;
         }
+    }
+}
+
+@keyframes blinkCursorLight{
+    from {
+        border-right-color: rgba(0, 0, 0, 0.363);
+    } to {
+        border-right-color: transparent;
     }
 }
