--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ main {
     align-items: center;
     justify-content: space-between;
     height: 100%;
-    padding: 6rem 3rem 4rem 3rem;
+    padding: 18vh 3rem 4rem 3rem;
     flex-wrap: wrap-reverse;
 }
 .presTitle h1 {
@@ -323,6 +323,13 @@ progress {
     text-decoration: none;
     color: var(--corf);
 }
+@media (max-width:1075px) {
+    .pres {
+        justify-content: center;
+        align-items: center;
+        padding: 7.5rem 4px 4rem 4px;
+    }
+}
 @media (max-width:700px) {
     .headerContainer {
         padding: 15px;
@@ -342,7 +349,7 @@ progress {
     .pres {
         justify-content: center;
         align-items: center;
-        padding: 7.5rem 4px 4rem 4px;
+        padding: 18vh 4px 4rem 4px;
     }
     .presTitle h1 {
         font-size: 27px;
